# GoN2N

./: .gitattributes  .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  go.mod
cmd/gon2n/: main.go  privilege_unix.go  privilege_windows.go
desktop_gui/: README.md  UI_CONVENTIONS.md  pubspec.yaml
desktop_gui/lib/: main.dart
desktop_gui/macos/Runner.xcodeproj/: project.pbxproj
desktop_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
desktop_gui/macos/Runner/Configs/: AppInfo.xcconfig
desktop_gui/test/: widget_test.dart
desktop_gui/windows/: CMakeLists.txt
desktop_gui/windows/launcher/: CMakeLists.txt  Launcher.rc  launcher.exe.manifest  main.cpp
desktop_gui/windows/runner/: Runner.rc  main.cpp  win32_window.cpp
docs/: BUILD.zh-CN.md  GUI.zh-CN.md
internal/client/: client.go  client_test.go
internal/config/: config.go  config_test.go
internal/members/: crypto.go  server.go  server_test.go
patches/: n2nR-fast-reconnect.patch
scripts/: build-n2nr-linux-amd64.sh  build-release.sh  install-server.sh
